--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -1,302 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Intern Data</title>
 
-        <style>
-            body {
-                margin: 0;
-                padding: 0em 1em;
-                background-color: #fff;
-                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-                    "Helvetica Neue", sans-serif;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <style>
+    body {
+    background: white;
+    margin: 0;
+    padding: 0em 1em 1em 1em;
+    font-family: -webkit-pictograph;
+}
 
-            * {
-                box-sizing: border-box;
-            }
+* {
+    box-sizing: border-box
+}
 
-            nav > div {
-                padding: 0.6em;
-                background-color: #fff;
-                border-radius: 5px;
-                box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.19);
-            }
+body > div:nth-of-type(1) {
+    font-weight: bold;
+    padding: 1em;
+    font-size: 18px;
+}
 
-            body > div:nth-of-type(1) {
-                width: 200px;
-                height: 200px;
-                position: fixed;
-                right: 8em;
-                border-radius: 50% 0 0 50%;
-            }
+nav {
+    background: white;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1em;
+    position: sticky;
+    top: 0;
+    background: #fff;
+    z-index: 1;
+}
 
-            body > div:nth-of-type(1):after {
-                content: "";
-                width: 0;
-                height: 0;
-                position: fixed;
-                border-width: 80px 80px 80px 80px;
-                margin-top: 8em;
-                border-style: solid;
-                border-color: red blue green yellow;
-                animation: move 2s infinite cubic-bezier(0.24, 0.09, 0.54, 0.71);
-            }
+nav > div:first-of-type > div:nth-of-type(1) {
+    background: white;
+}
 
-            @keyframes move {
-                0% {    
-                    border-width: 80px 30px 5px 80px;
-                    border-color: #fff #d8d8d8 #bdbdbd #fff;
-                }
-                25% {    
-                    border-width: 90px 50px 30px 90px;
-                }
-                50% {    
-                    border-width: 100px 30px 15px 100px;
-                }
-                75% {    
-                    border-width: 90px 50px 30px 90px;
-                }
-                100% {    
-                    border-width: 80px 30px 5px 80px;
-                    border-color: #fff #ddd #bdbdbd #fff;
-                }
-            }
+nav > div:first-of-type > div:nth-of-type(2) {
+    background: white;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+}
 
-            input {
-                padding: 0.5em;
-                background-color: #fff;
-                border: 2px solid #ddd;
-                border-radius: 5px;
-            }
+input {
+    padding: 0.8em 1.5em;
+    border-radius: 8px;
+    background: #EFEFEF;
+    border: 1px solid #e6e6e6e2;
+    margin: 1em 0em;
+}
 
-            input:active {
-                outline: none;
-            }
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
 
-            input:focus {
-                outline: none;
-            }
+.card {
+    background: #E4F9F5;
+    border-radius: 16px;
+    padding: 5em 1em 1em 1em;
+    flex: 1;
+    height: auto;
+    width: 30%;
+    min-width: 300px;
+    margin: 1.5em;
+    position: relative;
+    cursor: pointer;
+    border: 2px solid #ffff;
+}
 
-            nav {
-                display: flex;
-                flex-flow: row nowrap;
-                justify-content: flex-end;
-                align-items: center;
-                padding: 0.8em 0em 0.8em 0.8em;
-                background-color: transparent;
-                position: sticky;
-                top: 0;
-            }
+.card:hover {
+     border: 2px solid #b1b1b1a5;
+}
 
-            @media screen and (max-width: 500px) {
-                body {
-                    padding: 0em;
-                }
+.card > div:nth-of-type(1) {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    color: #40514E;
+    border: 2px solid #30E3CA;
+    box-sizing: border-box;
+    border-radius: 9px;
+    padding: 0.5em;
+}
 
-                nav {
-                    padding: 0.5em;
-                }
-                
-                body > div:nth-of-type(1) {
-                    display: none;
-                }
-            }
+.card > div:nth-of-type(1):hover {
+    background: #000;
+    color: #fff;
+    border-color: transparent;
+}
 
-            /* Isolated styles */
+.card-body > div {
+    padding: 0.5em;
+}
 
-            ul {
-                list-style: none;
-                height: 300px;
-                overflow-y: auto;
-                padding: 0.5em;
-            }
+.card-body > div:nth-of-type(1) {
+    background: red;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
 
-            li {
-                padding: 1em 0em;
-            }
+.card-body > div:nth-of-type(2) {
+}
 
-            li > div:last-of-type {
-                float: right;
-                font-size: 2rem;
-            }
+@media screen and (max-width: 600px) {
+    nav {
+        position: static;
+        top: auto;
+    }
+    input {
+        width: 100%;
+        display: block;
+        margin: 2em 0em;
+        padding: 1.5em;
+    }
 
-            .container {
-                display: block;
-                padding: 1em;
-                background-color: #fff;
-                border-radius: 5px;
-                border: 1px solid #eee;
-                cursor: pointer;
-                transition: all 0.5s ease-out;
-            }
+    .container {
+        flex-flow: column nowrap;
+    }
 
-            .container:hover {
-                box-shadow: 0 5px 10px 0 rgb(0 0 0 / 19%);
-            }
+    .card {
+        width: 100%;
+        display: flex;
+        flex-flow: column-reverse nowrap;
+        background: #fff;
+        padding: 0;
+    }
 
-            #transaction {
-                padding: 1em;
-                background-color: #fff;
-                border-radius: 5px;
-                display: none;
-                border: 1px solid #eee;
-            }
+    .card:hover {
+        box-shadow: none;
+        background: #fff;
+        border-color: #fff;
+    }
 
-            #transaction > div:nth-of-type(1) {
-                background-color: #ffff;
-                padding: 0.5em;
-            }
+    .card > div:nth-of-type(1) {
+        position: static;
+        background: white;
+        display: inline;
+        width: max-content;
+    }
 
-            #transaction > div:nth-of-type(1) > input {
-                background-color: #ffff;
-                padding: 0.7em;
-                width: 100%;
-                border-radius: 5px;
-                border: 2px solid #ddd;
-                display: block;
-            }
+    .card-body {
+        display: flex;
+        margin: 1em 0em;
+    }
+}
+    </style>
+</head>
 
-            #searchNav:disabled {
-                cursor: not-allowed;
-            }
-
-            .wrapper {
-                margin: 1em 0em;
-            }
-        </style>
-    </head>
-
-    <body>
-        <nav>
-            <div>
-                <input type="search" id="searchInput" placeholder="search" />
-            </div>
-        </nav>
-
-        <div></div>
-
-        <template id="template">
-            <style>
-                ul {
-                    list-style: none;
-                    height: 300px;
-                    overflow-y: auto;
-                    padding: 0.5em;
-                    background-color: #f0f0f0;
-                    border-radius: 5px;
-                }
-
-                li {
-                    padding: 1.5em 0em;
-                }
-
-                li > div:first-of-type {
-                    font-weight: 500;
-                }
-
-                li > div:last-of-type {
-                    float: right;
-                    font-size: 2rem;
-                }
-
-                .container {
-                    display: block;
-                    padding: 2em 1em;
-                    background-color: #fff;
-                    border-radius: 5px;
-                    border: 3px solid #fff;
-                    cursor: pointer;
-                    transition: all 0.2s ease-out;
-                }
-
-                .container:hover {
-                    /*border: 3px solid #afafaf;*/
-                    box-shadow: 0 0px 9px 0 rgb(0 0 0 / 21%);
-                }
-
-                .container:active {
-                    background-color: #f0f0f0;
-                }
-
-                #transaction {
-                    padding: 1em;
-                    background-color: #fff;
-                    border-radius: 5px;
-                    display: none;
-                    border: 1px solid #eee;
-                }
-
-                #transaction > div:nth-of-type(1) {
-                    background-color: #fff;
-                    padding: 0.5em;
-                }
-
-                #transaction > div:nth-of-type(1) > input {
-                    background-color: #ffff;
-                    padding: 0.7em;
-                    width: 100%;
-                    border-radius: 5px;
-                    border: 2px solid #ddd;
-                    display: block;
-                    box-sizing: border-box;
-                }
-
-                #searchNav:disabled {
-                    cursor: not-allowed;
-                }
-
-                .wrapper {
-                    margin: 1em 0em;
-                    max-width: 50%;
-                }
-
-                @media screen and (max-width: 600px) {
-                    .wrapper {
-                        max-width: 100%;
-                    }
-                }
-            </style>
-            <div class="wrapper">
-                <div class="container">
-                    <div id="floUserName">User Name</div>
-                    <div id="floId">User Id</div>
+<body>
+    <nav>
+        <div>
+            <div>RanchiMail</div>
+            <div>Intern Payments</div>
+        </div>
+        <input type="text" placeholder="search" />
+    </nav>
+    <div>Interns</div>
+    <div class="container">
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
                 </div>
-                <div id="transaction">
-                    <div>
-                        <input
-                            type="text"
-                            id="searchNav"
-                            placeholder="search"
-                        />
-                    </div>
-                    <ul id="content">
-                        <li>
-                            <div>Message</div>
-                            <div>Sender - Receiver</div>
-                            <div>3000</div>
-                        </li>
-                        <li>
-                            <div>Message</div>
-                            <div>Sender - Receiver</div>
-                            <div>Amount</div>
-                        </li>
-                        <li>
-                            <div>Message</div>
-                            <div>Sender - Receiver</div>
-                            <div>Amount</div>
-                        </li>
-                    </ul>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
                 </div>
-            </div>
-        </template>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+        <div class="card">
+           <div>Intern Level</div>
+           <div class="card-body">
+                <div></div>
+                <div>Intern Name</div>
+                <div>flo Id</div>
+           </div>
+        </div>
+    </div>
+</body>
 
-        <div id="root"></div>
-       
-        <script src="js/main.js"></script> 
-    </body>
 </html>
