--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -28,7 +28,7 @@ body > div:nth-of-type(1) {
 nav {
     background: white;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
     padding: 1em;
