--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -5,271 +5,324 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link href="http://fonts.cdnfonts.com/css/monalisa-font" rel="stylesheet">
+
+    <title>Document</title>
+
     <style>
-    body {
-    background: white;
-    margin: 0;
-    padding: 0em 1em 1em 1em;
-    font-family: -webkit-pictograph;
-}
+        body {
+            padding: 0 0.5em 0.5em 0.5em;
+            margin: 0;
+            font-family: sans-serif;
 
-* {
-    box-sizing: border-box
-}
+        }
 
-body > div:nth-of-type(1) {
-    font-weight: bold;
-    padding: 1em;
-    font-size: 18px;
-}
+        * {
+            box-sizing: border-box;
+        }
 
-nav {
-    background: white;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1em;
-    position: sticky;
-    top: 0;
-    background: #fff;
-    z-index: 1;
-}
+        h1 {
+            text-align: center;
+            font-weight: 100;
+        }
 
-nav > div:first-of-type > div:nth-of-type(1) {
-    background: white;
-}
+        .card {
+            margin: 3em auto;
+            background-color: antiquewhite;
+            padding: 2em 1.5em;
+            cursor: pointer;
+            max-width: 70%;
+        }
 
-nav > div:first-of-type > div:nth-of-type(2) {
-    background: white;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 28px;
-    line-height: 33px;
-}
+        .list {
+            margin: 1em auto;
+            background-color: #f0f0f0;
+            padding: 2em 1.5em;
+            cursor: pointer;
+            max-width: 70%;
+        }
 
-input {
-    padding: 0.8em 1.5em;
-    border-radius: 8px;
-    background: #EFEFEF;
-    border: 1px solid #e6e6e6e2;
-    margin: 1em 0em;
-}
+        nav {
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.5em 4em;
+            position: sticky;
+            top: 0;
+            background-color: #fff;
+        }
 
-.container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
+        nav>div:nth-of-type(1) {
+            cursor: pointer;
+        }
 
-.card {
-    background: #E4F9F5;
-    border-radius: 16px;
-    padding: 5em 1em 1em 1em;
-    flex: 1;
-    height: auto;
-    width: 30%;
-    min-width: 300px;
-    margin: 1.5em;
-    position: relative;
-    cursor: pointer;
-    border: 2px solid #ffff;
-}
+        #back>div:first-of-type {
+            font-weight: bold;
+        }
 
-.card:hover {
-     border: 2px solid #b1b1b1a5;
-}
+        @media screen and (max-width: 500px) {
+            nav {
+                padding: 0.5em;
+            }
 
-.card > div:nth-of-type(1) {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    color: #40514E;
-    border: 2px solid #30E3CA;
-    box-sizing: border-box;
-    border-radius: 9px;
-    padding: 0.5em;
-}
+            .list {
+                max-width: 100%;
+            }
 
-.card > div:nth-of-type(1):hover {
-    background: #000;
-    color: #fff;
-    border-color: transparent;
-}
-
-.card-body > div {
-    padding: 0.5em;
-}
-
-.card-body > div:nth-of-type(1) {
-    background: red;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
-
-.card-body > div:nth-of-type(2) {
-}
-
-@media screen and (max-width: 600px) {
-    nav {
-        position: static;
-        top: auto;
-        flex-flow: column nowrap;
-    }
-    input {
-        width: 100%;
-        display: block;
-        margin: 2em 0em;
-        padding: 1.5em;
-    }
-
-    .container {
-        flex-flow: column nowrap;
-    }
-
-    .card {
-        width: 100%;
-        display: flex;
-        flex-flow: column-reverse nowrap;
-        background: #fff;
-        padding: 0;
-    }
-
-    .card:hover {
-        box-shadow: none;
-        background: #fff;
-        border-color: #fff;
-    }
-
-    .card > div:nth-of-type(1) {
-        position: static;
-        background: white;
-        display: inline;
-        width: max-content;
-    }
-
-    .card-body {
-        display: flex;
-        margin: 1em 0em;
-    }
-}
+            .card {
+                max-width: 100%;
+            }
+        }
     </style>
+    <script src="components.min.js"></script>
 </head>
 
 <body>
     <nav>
-        <div>
-            <div>RanchiMail</div>
-            <div>Intern Payments</div>
+        <div id="back">
+            <div>Ranchi Mall</div>
+            <div>Flo Intern Data</div>
         </div>
-        <input type="text" placeholder="search" />
+        <sm-input type="search" placeholder="search" />
     </nav>
-    <div>Interns</div>
-    <div class="container">
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
+    <div id="root"></div>
+    <script>
+        (() => {
+            console.log("//== Js on Fire ==//")
+
+            const floUserList = [
+                {
+                    floUserName: "Aakriti Sinha",
+                    floId: "FKa43RxHUAdJbgV6KipQ4PvXi6Kgw4HmFn",
+                    project: "Product Launch and Blockchain Marketing"
+                },
+                {
+                    floUserName: "Shambhavi",
+                    floId: "FK96PZh4NskoJfWoyqcvLpSo7YnTLWMmdD",
+                    project: "Product Launch and Blockchain Marketing"
+                },
+                {
+                    floUserName: "Salomi Sarkar",
+                    floId: "F7HVKrF68Y6YKE9XXpHhAcxt6MwRLcUD67",
+                    project: "Product Launch and Blockchain Marketing"
+
+                },
+                {
+                    floUserName: "Megha Rani",
+                    floId: "FEvLovuDjWo4pXX3Y4SKDh8sq1AxJzqz9Z",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Kriti Shreya",
+                    floId: "F8zYh6rCuorGmnMtqGFpaKGeBqQaj9WVtG",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Rashi Sanghvi",
+                    floId: "FHWXdnjRRJErqazye4Y9MRmE42D4Bp6Bj7",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Muskan Shoundik",
+                    floId: "FSdjJCJdU43a1dyWY6dRES1ekoupEjFPqQ",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Gunjan Kumar Ranjan",
+                    floId: "FCTGD4M3DvMKupX3j2y5f3cQNDD9i6LUp7",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Rakhijeet Singh",
+                    floId: "FCqLr9nymnbh7ahta1gGC78z634y4GHJGQ",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Madhu Verma",
+                    floId: "F765ofUHBhfXhvzrSgnPjvCvJXXCpoW6be",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Shruti Kashyap",
+                    floId: "FPtrQK6aSCgFeSNpzC68YTznHPfiz7CCvW",
+                    project: "P2P Content Collaboration"
+                },
+                {
+                    floUserName: "Shivam Kumar Pandey",
+                    floId: "FJK9EDGhKj4Wr2zeCo3zRPXCNU6CXFFQAN",
+                    project: "JavaScript Development for Blockchain Products"
+                },
+                {
+                    floUserName: "Abhijeet Anand",
+                    floId: "FEHKFxQxycsxw2qQQSn2Y1BCT6Mfb8EMko",
+                    project: "JavaScript Development for Blockchain Products"
+                },
+                {
+                    floUserName: "Ritika Agrawal",
+                    floId: "FFaB6N1ETZsykXVS2PdM5xhj5BBoqsfsXC",
+                    project: "JavaScript Development for Blockchain Products"
+                },
+                {
+                    floUserName: "Jai Dev",
+                    floId: "FFoVnVMJv8BTfbk7ij9T5jPHs7VKSz886A",
+                    project: "JavaScript Development for Blockchain Products"
+                }
+            ]
+
+            let _rootDiv = document.getElementById("root")
+
+            customElements.define("rn-card", class RnCard extends HTMLElement {
+                static get observedAttributes() {
+                    return ['floid', 'flousername', 'project']
+                }
+
+                attributeChangedCallback(name, oldValue, newValue) {
+                    if (oldValue !== newValue) {
+                        this[name] = newValue
+                    }
+                }
+
+                connectedCallback() {
+                    this.innerHTML = `
+                <div class="card">
+                    <div>${this.floid}</div> 
+                    <div>${this.flousername}</div> 
+                    <div>${this.project}</div> 
+                </div> 
+            `
+                    this.addEventListener("click", (e) => {
+                        window.history.pushState(
+                            {
+                                floid: this.floid,
+                                message: "Detail Page active"
+                            },
+                            "/detail",
+                            "/detail"
+                        )
+
+                        _rootDiv.innerHTML = routes["/detail"]
+                    })
+                }
+            })
+
+            customElements.define("rn-detail", class RnDetail extends HTMLElement {
+                get data() {
+                    return this.getAttribute("data")
+                }
+
+                set data(val) {
+                    return this.hasAttribute("data", val)
+                }
+
+                static get observedAttributes() {
+                    return ['data']
+                }
+
+                attributeChangedCallback(name, oldValue, newValue) {
+                    if (oldValue !== newValue) {
+                        console.log(name, oldValue, newValue)
+                        this[name] = newValue
+                        this.render()
+                    }
+                }
+
+                _getTransactionDetail = async (id) => {
+                    try {
+                        let uri = `https://ranchimallflo.duckdns.org/api/v1.0/getFloAddressTransactions?floAddress=${id}`
+                        let res = await fetch(uri)
+                        let data = await res.json()
+                        console.log(this.data)
+                        this.render(data)
+                        // if (data.result === 'ok') {
+                        //     Object.keys(data.transactions).map((index) => {
+                        //         let { parsedFloData, transactionDetails } = data.transactions[index]
+                        //         console.log(parsedFloData)
+                        //         this.setAttribute("data", parsedFloData)
+                        //         this.render(parsedFloData)
+                        //     })
+                        // }
+                    } catch (e) {
+                        // ERROR HANDLING
+                        console.log("Error Occured while fetching the User Data : ", e)
+                    }
+                }
+
+                connectedCallback() {
+                    this._getTransactionDetail(window.history.state.floid)
+                    this.render()
+                }
+
+                render(data) {
+                    if (data) {
+                        this.innerHTML = ``
+                        let el = document.createElement("div")
+                        if (data.result === 'ok') {
+                            Object.keys(data.transactions).map((index) => {
+                                let { parsedFloData, transactionDetails } = data.transactions[index]
+                                console.log(parsedFloData)
+                                this.setAttribute("data", parsedFloData)
+                                const { flodata, tokenAmount } = parsedFloData
+                                let li = document.createElement("div")
+                                li.classList.add("list")
+                                li.innerHTML = `
+                        <div>Message: ${flodata}</div> 
+                        <div>Amount: RS.${tokenAmount}.00</div> 
+`
+                                el.appendChild(li)
+                            })
+                        }
+
+                        this.innerHTML = `
+                    <h1>Transaction Details</h1> 
+                `
+
+                        this.appendChild(el)
+                    } else {
+                        this.innerHTML = `
+                <div style="margin-top: 8em;">
+                    <h1>Loading<h1>
                 </div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-                </div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-        <div class="card">
-           <div>Intern Level</div>
-           <div class="card-body">
-                <div></div>
-                <div>Intern Name</div>
-                <div>flo Id</div>
-           </div>
-        </div>
-    </div>
+            `
+                    }
+                }
+            })
+
+            const indexPage = document.createElement("div")
+            // for (let i = 0; i < 10; i++) {
+            //     let el = document.createElement("rn-card")
+            //     el.setAttribute("floid", i)
+            //     indexPage.appendChild(el)
+            // }
+
+            floUserList.forEach(user => {
+                let el = document.createElement("rn-card")
+                el.setAttribute("floid", user.floId)
+                el.setAttribute("flousername", user.floUserName)
+                el.setAttribute("project", user.project)
+                indexPage.appendChild(el)
+            })
+
+            const detailPage = `<rn-detail data="Loading"></rn-detail>`
+
+            const routes = {
+                "/": indexPage.innerHTML,
+                "/detail": detailPage
+            }
+
+            document.getElementById("back").addEventListener("click", e => {
+                window.history.pushState(
+                    {},
+                    "/",
+                    "/"
+                )
+                _rootDiv.innerHTML = routes["/"]
+            })
+
+            _rootDiv.innerHTML = routes["/"]
+
+        })()
+    </script>
 </body>
 
 </html>
