--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -11,7 +11,6 @@
 
     <style>
         body {
-            padding: 0 0.5em 0.5em 0.5em;
             margin: 0;
             font-family: sans-serif;
 
@@ -23,7 +22,7 @@
 
         h1 {
             text-align: center;
-            font-weight: 100;
+            animation: move 1.5s infinite;
         }
 
         .card {
@@ -51,6 +50,7 @@
             position: sticky;
             top: 0;
             background-color: #fff;
+            box-shadow: 0 2px 8px 1px rgb(64 60 67 / 24%);
         }
 
         nav>div:nth-of-type(1) {
@@ -59,6 +59,20 @@
 
         #back>div:first-of-type {
             font-weight: bold;
+        }
+
+        @keyframes move {
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
         }
 
         @media screen and (max-width: 500px) {
@@ -84,13 +98,27 @@
             <div>Ranchi Mall</div>
             <div>Flo Intern Data</div>
         </div>
-        <sm-input type="search" placeholder="search" />
+        <sm-input id="input" type="search" placeholder="search" />
     </nav>
     <div id="root"></div>
+    <script src="main.js"></script>
     <script>
+        "use strict";
+        var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, generator) {
+            function adopt(value) { return value instanceof P ? value : new P(function (resolve) { resolve(value); }); }
+            return new (P || (P = Promise))(function (resolve, reject) {
+                function fulfilled(value) { try { step(generator.next(value)); } catch (e) { reject(e); } }
+                function rejected(value) { try { step(generator["throw"](value)); } catch (e) { reject(e); } }
+                function step(result) { result.done ? resolve(result.value) : adopt(result.value).then(fulfilled, rejected); }
+                step((generator = generator.apply(thisArg, _arguments || [])).next());
+            });
+        };
+        // Defining a types
         (() => {
-            console.log("//== Js on Fire ==//")
-
+            console.log("//== Js on Fire ==//");
+            /**
+             * @example { floid: "John", floUserName: "4y53457384657438", project: "Anything"}
+             */
             const floUserList = [
                 {
                     floUserName: "Aakriti Sinha",
@@ -106,7 +134,6 @@
                     floUserName: "Salomi Sarkar",
                     floId: "F7HVKrF68Y6YKE9XXpHhAcxt6MwRLcUD67",
                     project: "Product Launch and Blockchain Marketing"
-
                 },
                 {
                     floUserName: "Megha Rani",
@@ -168,21 +195,28 @@
                     floId: "FFoVnVMJv8BTfbk7ij9T5jPHs7VKSz886A",
                     project: "JavaScript Development for Blockchain Products"
                 }
-            ]
-
-            let _rootDiv = document.getElementById("root")
-
+            ];
+            let _rootDiv = document.getElementById("root");
+            let _backBtn = document.getElementById("back");
+            let _input = document.getElementById("input");
             customElements.define("rn-card", class RnCard extends HTMLElement {
-                static get observedAttributes() {
-                    return ['floid', 'flousername', 'project']
+                constructor() {
+                    super();
+                    this.floid = "";
+                    this.flousername = "";
+                    this.project = "";
                 }
-
+                // check which attribute has to change
+                static get observedAttributes() {
+                    return ['floid', 'flousername', 'project'];
+                }
+                // run when there is change in attributes
                 attributeChangedCallback(name, oldValue, newValue) {
                     if (oldValue !== newValue) {
-                        this[name] = newValue
+                        this[name] = newValue;
                     }
                 }
-
+                // run when the element attached to the DOM
                 connectedCallback() {
                     this.innerHTML = `
                 <div class="card">
@@ -190,138 +224,192 @@
                     <div>${this.flousername}</div> 
                     <div>${this.project}</div> 
                 </div> 
-            `
+            `;
                     this.addEventListener("click", (e) => {
-                        window.history.pushState(
-                            {
-                                floid: this.floid,
-                                message: "Detail Page active"
-                            },
-                            "/detail",
-                            "/detail"
-                        )
-
-                        _rootDiv.innerHTML = routes["/detail"]
-                    })
+                        window.history.pushState({
+                            floid: this.floid,
+                            message: "Detail Page active"
+                        }, "detail", window.location.origin + "/detail");
+                        console.log(window.location.pathname);
+                        _rootDiv.innerHTML = routes["/detail"];
+                    });
                 }
-            })
-
+            });
             customElements.define("rn-detail", class RnDetail extends HTMLElement {
+                constructor() {
+                    super(...arguments);
+                    /**
+                     * @param id is always a string
+                     */
+                    this._getTransactionDetail = (id) => __awaiter(this, void 0, void 0, function* () {
+                        try {
+                            let uri = `https://ranchimallflo.duckdns.org/api/v1.0/getFloAddressTransactions?floAddress=${id}`;
+                            let res = yield fetch(uri);
+                            let data = yield res.json();
+                            this.render(data);
+                            // if (data.result === 'ok') {
+                            //     Object.keys(data.transactions).map((index) => {
+                            //         let { parsedFloData, transactionDetails } = data.transactions[index]
+                            //         console.log(parsedFloData)
+                            //         this.setAttribute("data", parsedFloData)
+                            //         this.render(parsedFloData)
+                            //     })
+                            // }
+                        }
+                        catch (e) {
+                            // ERROR HANDLING
+                            console.log("Error Occured while fetching the User Data : ", e);
+                        }
+                    });
+                }
+                // get the value of the attribute
                 get data() {
-                    return this.getAttribute("data")
+                    return this.hasAttribute("data");
                 }
-
+                // set the value of the attribute
                 set data(val) {
-                    return this.hasAttribute("data", val)
+                    this.setAttribute("data", val);
                 }
-
+                // check which attribute has to change
                 static get observedAttributes() {
-                    return ['data']
+                    return ['data'];
                 }
-
+                // run when there is change in attributes
                 attributeChangedCallback(name, oldValue, newValue) {
                     if (oldValue !== newValue) {
-                        console.log(name, oldValue, newValue)
-                        this[name] = newValue
-                        this.render()
+                        console.log(name, oldValue, newValue);
+                        this[name] = newValue;
+                        this.render();
                     }
                 }
-
-                _getTransactionDetail = async (id) => {
-                    try {
-                        let uri = `https://ranchimallflo.duckdns.org/api/v1.0/getFloAddressTransactions?floAddress=${id}`
-                        let res = await fetch(uri)
-                        let data = await res.json()
-                        console.log(this.data)
-                        this.render(data)
-                        // if (data.result === 'ok') {
-                        //     Object.keys(data.transactions).map((index) => {
-                        //         let { parsedFloData, transactionDetails } = data.transactions[index]
-                        //         console.log(parsedFloData)
-                        //         this.setAttribute("data", parsedFloData)
-                        //         this.render(parsedFloData)
-                        //     })
-                        // }
-                    } catch (e) {
-                        // ERROR HANDLING
-                        console.log("Error Occured while fetching the User Data : ", e)
-                    }
-                }
-
                 connectedCallback() {
-                    this._getTransactionDetail(window.history.state.floid)
-                    this.render()
+                    this._getTransactionDetail(window.history.state.floid);
+                    this.render();
                 }
-
+                /**
+                 * @param data will tne data of transaction details
+                 */
                 render(data) {
                     if (data) {
-                        this.innerHTML = ``
-                        let el = document.createElement("div")
+                        this.innerHTML = ``;
+                        let el = document.createElement("div");
                         if (data.result === 'ok') {
                             Object.keys(data.transactions).map((index) => {
-                                let { parsedFloData, transactionDetails } = data.transactions[index]
-                                console.log(parsedFloData)
-                                this.setAttribute("data", parsedFloData)
-                                const { flodata, tokenAmount } = parsedFloData
-                                let li = document.createElement("div")
-                                li.classList.add("list")
+                                let { parsedFloData, transactionDetails } = data.transactions[index];
+                                console.log(parsedFloData);
+                                this.setAttribute("data", parsedFloData);
+                                const { flodata, tokenAmount } = parsedFloData;
+                                let li = document.createElement("div");
+                                li.classList.add("list");
                                 li.innerHTML = `
                         <div>Message: ${flodata}</div> 
                         <div>Amount: RS.${tokenAmount}.00</div> 
-`
-                                el.appendChild(li)
-                            })
+`;
+                                el.appendChild(li);
+                            });
                         }
-
                         this.innerHTML = `
-                    <h1>Transaction Details</h1> 
-                `
-
-                        this.appendChild(el)
-                    } else {
+                    <h2 style="text-align: center;">Transaction Details</h2> 
+                `;
+                        this.appendChild(el);
+                    }
+                    else {
                         this.innerHTML = `
                 <div style="margin-top: 8em;">
                     <h1>Loading<h1>
                 </div>
-            `
+            `;
                     }
                 }
-            })
-
-            const indexPage = document.createElement("div")
+            });
+            const indexPage = document.createElement("div");
             // for (let i = 0; i < 10; i++) {
             //     let el = document.createElement("rn-card")
             //     el.setAttribute("floid", i)
             //     indexPage.appendChild(el)
             // }
-
-            floUserList.forEach(user => {
-                let el = document.createElement("rn-card")
-                el.setAttribute("floid", user.floId)
-                el.setAttribute("flousername", user.floUserName)
-                el.setAttribute("project", user.project)
-                indexPage.appendChild(el)
-            })
-
-            const detailPage = `<rn-detail data="Loading"></rn-detail>`
-
+            floUserList.forEach((user) => {
+                let el = document.createElement("rn-card");
+                el.setAttribute("floid", user.floId);
+                el.setAttribute("flousername", user.floUserName);
+                el.setAttribute("project", user.project);
+                indexPage.appendChild(el);
+            });
+            let detailPage = `<rn-detail data="Loading"></rn-detail>`;
             const routes = {
                 "/": indexPage.innerHTML,
                 "/detail": detailPage
+            };
+            // search function
+            // const searchName = (e: Event): any => {
+            //     // Prevent from page loading
+            //     let floName: string = e.target.value
+            //     // clear the list
+            //     _rootDiv.innerHTML = ""
+            //     // show the loading indicator
+            //     _rootDiv.innerHTML = "<h1>Loading</h1>"
+            //     const result: Array<{
+            //         floUserName: string,
+            //         floId: string,
+            //         project: string
+            //     }> = floUserList.filter((user: User): boolean => {
+            //         let newUserName = user.floUserName.slice(0, floName.length)
+            //         return newUserName === floName
+            //     })
+            //     // clear the Loading
+            //     _rootElement.innerHTML = ""
+            //     if (result.length === 0) {
+            //         // clear all the search result
+            //         renderUserLisit()
+            //     } else {
+            //         // fill the info the element
+            //         generateCard(result)
+            //     }
+            // }
+            function _changeInput(e) {
+                // Prevent from page loading
+                let floName = e.target.value;
+                // clear the list
+                _rootDiv.innerHTML = "";
+                // show the loading indicator
+                _rootDiv.innerHTML = "<h1>Loading</h1>";
+                const result = floUserList.filter((user) => {
+                    let newUserName = user.floUserName.slice(0, floName.length);
+                    return newUserName.toLowerCase() === floName.toLowerCase();
+                });
+                _rootDiv.innerHTML = "";
+                if (result.length > 0) {
+                    result.forEach((user) => {
+                        let el = document.createElement("rn-card");
+                        el.setAttribute("floid", user.floId);
+                        el.setAttribute("flousername", user.floUserName);
+                        el.setAttribute("project", user.project);
+                        let div = document.createElement("div");
+                        div.appendChild(el);
+                        _rootDiv.appendChild(div);
+                    });
+                }
+                else {
+                    // ...
+                    let div = document.createElement("div");
+                    floUserList.forEach((user) => {
+                        let el = document.createElement("rn-card");
+                        el.setAttribute("floid", user.floId);
+                        el.setAttribute("flousername", user.floUserName);
+                        el.setAttribute("project", user.project);
+                        div.appendChild(el);
+                    });
+                    _rootDiv.innerHTML = div.innerHTML;
+                }
             }
+            _input.addEventListener("input", _changeInput);
+            _backBtn.addEventListener("click", e => {
+                window.history.pushState({}, "/", window.location.origin + "/");
+                _rootDiv.innerHTML = routes["/"];
+            });
+            _rootDiv.innerHTML = routes["/"];
+        })();
 
-            document.getElementById("back").addEventListener("click", e => {
-                window.history.pushState(
-                    {},
-                    "/",
-                    "/"
-                )
-                _rootDiv.innerHTML = routes["/"]
-            })
-
-            _rootDiv.innerHTML = routes["/"]
-
-        })()
     </script>
 </body>
 
