--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/monalisa-font" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Flo Intern Data</title>
 
     <style>
         body {
