--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -11946,5 +11946,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             }
         </script>
         <script src="js/main.js"></script>
+        <script>
+        </script>
     </body>
 </html>
