Update the search bar

--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>FLO Standard Operators</title>
+    <title>FLO Interns Payements Page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flo Intern Data</title>
@@ -88,9 +88,21 @@
                     <h4>Flo Interns Payments Page</h4>
                 </div>
             </div>
-            <sm-input placeholder="Search" id="input" type="search"></sm-input>
+            <div id="searchToggle">
+                <img src="https://www.toptal.com/designers/htmlarrows/assets/images/search-button-c0042ed6.svg" alt="Search button">
+            </div>
             <theme-toggle></theme-toggle>
         </header>
+
+        <!-- Search bar --> 
+        <div class="search-wrapper">
+            <div class="search-overlay"></div>
+            <div class="search-bar">
+                <div class="search">
+                    <sm-input placeholder="Search" id="input" type="search"></sm-input>
+                </div>
+            </div>
+        </div>
 
         <!-- User Info -->
         <div class="app" id="uInfo"></div>
