--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -85,7 +85,7 @@
                 </svg> -->
                 <div class="grid">
                     <h5>RanchiMall</h5>
-                    <h4>Flo Interns Payments Page</h4>
+                    <h4>Flo Interns Payments</h4>
                 </div>
             </div>
             <div id="searchToggle">
