--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -200,7 +200,7 @@
                 </style>
                 <div class="card">
                     <a class="link">
-                        <div class="profile"></div>
+                        <div></div>
                         <h3 class="heading-name"></h3>
                         <h5 class="heading-floId"></h5>
                         <h5 class="total-money-earned"></h5>
