Fix the template typo

--- a/floIntern/index.html
+++ b/floIntern/index.html
@@ -212,7 +212,9 @@
                         </div>
                         <div class="intern-rating"></div>
                     </a>
-                    <a target="_blank" class="blockchain-link">View Last Transaction</a>
+                    <a target="_blank" class="blockchain-link">
+                        View transaction on blockchain
+                    </a>
                 </div>
             </template>
 
